--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.6.1",
+    "formidable": "^1.2.1",
     "node-static": "^0.7.10",
-    "request": "^2.87.0"
+    "request": "^2.88.0"
   }
 }
